appId: com.knowyourpit.app
---
- tapOn:
    text: "More"
- waitForAnimationToEnd:
    timeout: 2000
- tapOn:
    text: "Upgrade to Pro"
- waitForAnimationToEnd:
    timeout: 2000
- assertVisible:
    text: "Pro"
    timeout: 5000
- takeScreenshot: "06-pro-features"
